# vertical-profiler

./: .gitignore  .gitmodules  Makefile  README.md  build-setup.sh  env.sh  profiler_config.json
docs/: doc.typ  justfile  refs.bib
prof/: Makefile  Makefile-standalone  meson.build  unit-test.sh
prof/fireperf/: flamegraph-tracerv
prof/profiler/: profiler.cc  stack_unwinder.cc  stack_unwinder_main.cc  thread_pool.cc
prof/spike-top/: ganged_devices.cc  mmu_lib.cc  mmu_lib.h  processor_lib.cc  processor_lib.h  sim_lib.cc  sim_lib.h  spike_lib.cc
prof/src/: callstack_info.cc  callstack_info.h  disam.h  file_splitter.cc  file_splitter.h  file_splitter_main.cc  main.cc  objdump_parser.cc  objdump_parser.h  perfetto_trace.cc  perfetto_trace.h  profiler.cc  profiler.h  profiler_main.cc  stack_unwinder.cc  stack_unwinder_main.cc  string_parser.cc  string_parser.h  thread_pool.cc  thread_pool.h  trace_tracker.h  types.h
prof/test/: test.dump  test_file_splitter.cc  test_perfetto_trace.cc  test_string_parser.cc
scripts/: autoload-perfetto.py  compare-trace.py  create-flamegraph.py  create-flamegraph.sh  create-perfetto-proto.py  example-flamegraph.sh  firesim_config.py  launch-qemu.sh  profiler  run-profiler.py  test-prof-ganged.sh  test-spike-ganged.sh  utils.py
sim/riscv-isa-sim-private/: .gitignore  br-base.img  build.sh  overlay.img
sim/riscv-isa-sim-private/riscv/: processor.cc
src/: main.cc  meson.build  trace_tracker.cc
src/lib/: reformat_cospike_trace.cc  string_parser.cc  string_parser.h  trace.h  trace_reader.cc  trace_reader.h
src/profiler/: callstack_info.cc  callstack_info.h  disam.h  disasm.cc  logger.cc  logger.h  mem_pool.h  objdump_parser.cc  objdump_parser.h  perfetto_trace.cc  perfetto_trace.h  profiler.cc  profiler.h  profiler_main.cc  profiler_state.cc  profiler_state.h  stack_unwinder.cc  stack_unwinder.h  stack_unwinder_main.cc  thread_pool.cc  thread_pool.h  trace_reader.cc  trace_reader.h  types.h
src/spike-top/: ganged_devices.cc  ganged_devices.h  mmu_lib.cc  mmu_lib.h  ns16550_lib.cc  ns16550_lib.h  processor_lib.cc  processor_lib.h  sim_lib.cc  sim_lib.h  spike_lib.cc
src/test/: test.dump  test_assert.cc  test_objdump_parser.cc  test_perfetto_trace.cc  test_string_parser.cc  test_trace_reader.cc
src/tracerv/: tracerv_processing.cc
test-io/linux-poweroff/: Makefile  build-linux-img.sh
test-io/test-binaries/: Makefile  blkdev.riscv  build-linux-img.sh  hello-bare.yaml  hello.c  hello.riscv  iceblk-bare.yaml  linux-workloads.yaml
